--- a/index.html
+++ b/index.html
@@ -6,9 +6,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="asset/css/style.css">
+
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
+
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
+    <!-- header desktop -->
+    <div class="container-fluid header desktop">
+        <div class="row">
+            <div class="col-lg-3 col-xxl-2 logo">
+                <h3 class="my-2 ms-3">Weather App</h3>
+            </div>
+
+            <div class="col-lg-7 col-xxl-8 search">
+                <form class="d-flex my-2" role="search">
+                    <button class="btnSearch" type="submit"><i class="fa fa-search" aria-hidden="true"
+                            style="width: 30px;"></i></button>
+                    <input class="form-control me-2 focus-ring" type="search" placeholder="Search City..."
+                        aria-label="Search" style="--bs-focus-ring-color: var(--label_extra); 
+                    --bs-focus-ring-x: 0px;
+                    --bs-focus-ring-y: 0px;
+                    --bs-focus-ring-blur: 1px;">
+                </form>
+            </div>
+
+            <div class="col-lg-1 notify text-end">
+                <i class="fa fa-bell mt-3" aria-hidden="true" style="cursor: pointer;"></i>
+            </div>
+
+            <div class="col-lg-1 formats text-end">
+                <div class="dropdown my-2 me-3">
+                    <button class="btnFormats px-2" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        &deg;C
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">&deg;C</a></li>
+                        <li><a class="dropdown-item" href="#">&deg;F</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 
 
 
