add tablet and mobile headers

--- a/index.html
+++ b/index.html
@@ -66,6 +66,87 @@
         </div>
     </div>
 
+    <!-- header tablet -->
+    <div class="container-fluid header tablet">
+        <div class="row">
+            <div class="col-md-9 col-sm-9 logo">
+                <h3 class="my-2 ms-3">Weather App</h3>
+            </div>
+
+            <div class="col-md-1 col-sm-1 notify text-end pe-0">
+                <i class="fa fa-bell mt-3" aria-hidden="true" style="cursor: pointer;"></i>
+            </div>
+
+            <div class="col-md-2 col-sm-2 formats text-end ps-0">
+                <div class="dropdown my-2 me-3">
+                    <button class="btnFormats px-2" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        &deg;C
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">&deg;C</a></li>
+                        <li><a class="dropdown-item" href="#">&deg;F</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12 col-sm-12 search px-5">
+                <form class="d-flex my-2 mx-5" role="search">
+                    <button class="btnSearch" type="submit"><i class="fa fa-search" aria-hidden="true"
+                            style="width: 30px;"></i></button>
+                    <input class="form-control me-2 focus-ring" type="search" placeholder="Search City..."
+                        aria-label="Search" style="--bs-focus-ring-color: var(--label_extra); 
+                    --bs-focus-ring-x: 0px;
+                    --bs-focus-ring-y: 0px;
+                    --bs-focus-ring-blur: 1px;">
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- header mobile -->
+    <div class="container-fluid header mobile">
+        <div class="row">
+            <div class="col-7 logo">
+                <h3 class="my-2 ms-3">Weather App</h3>
+            </div>
+
+            <div class="col-2 notify text-end pe-0">
+                <i class="fa fa-bell mt-3" aria-hidden="true" style="cursor: pointer;"></i>
+            </div>
+
+            <div class="col-3 formats text-end ps-0">
+                <div class="dropdown my-2 me-3">
+                    <button class="btnFormats px-2" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        &deg;C
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">&deg;C</a></li>
+                        <li><a class="dropdown-item" href="#">&deg;F</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 search px-5">
+                <form class="d-flex my-2" role="search">
+                    <button class="btnSearch" type="submit"><i class="fa fa-search" aria-hidden="true"
+                            style="width: 30px;"></i></button>
+                    <input class="form-control me-2 focus-ring" type="search" placeholder="Search City..."
+                        aria-label="Search" style="--bs-focus-ring-color: var(--label_extra); 
+                    --bs-focus-ring-x: 0px;
+                    --bs-focus-ring-y: 0px;
+                    --bs-focus-ring-blur: 1px;">
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     
 
 
