--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="asset/css/style.css">
+    <link rel="stylesheet" href="./asset/css/style.css">
 
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,10 +17,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
 
-    <!-- icon -->
+    <!-- font-awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
         integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- bootstrap icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <!-- swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 </head>
 
@@ -41,7 +43,8 @@
 
             <div class="col-3 col-sm-2 col-md-2 col-lg-1 formats text-end">
                 <div class="my-3 me-3">
-                    <select class="form focus-ring py-2 px-2" id="getFormatValue" style="--bs-focus-ring-color: var(--label_extra);">
+                    <select class="form focus-ring py-2 px-2" id="getFormatValue"
+                        style="--bs-focus-ring-color: var(--label_extra);">
                         <option selected value="C" onclick="formatController()">&deg;C</option>
                         <option value="F" onclick="formatController()">&deg;F</option>
                     </select>
@@ -63,7 +66,8 @@
             <!-- current weather-->
             <div class="col-12 col-sm-12 col-md-7 col-lg-5 current">
                 <div class="location my-3">
-                    <h6 class="py-1 mb-0 ms-3"><i class="fa fa-map-marker" aria-hidden="true"></i> <span id="setLocation"></span></h6>
+                    <h6 class="py-1 mb-0 ms-3"><i class="fa fa-map-marker" aria-hidden="true"></i> <span
+                            id="setLocation"></span></h6>
                 </div>
 
                 <div class="card">
@@ -88,7 +92,8 @@
                                 <img src="" class="weatherImg" alt="weather-img" id="setWeatherImg">
                             </div>
                             <div class="col-6">
-                                <h6 class="mt-2 mb-0"><span id="setTemp" class="temp"></span><span id="setFormat" class="tempFormat"></span></h6>
+                                <h6 class="mt-2 mb-0"><span id="setTemp" class="temp"></span><span id="setFormat"
+                                        class="tempFormat"></span></h6>
                                 <span id="setCondition" class="value"></span><br>
                                 <span class="label">Feels like : </span><span class="value" id="setFeelsLike"></span>
                             </div>
@@ -99,16 +104,19 @@
                                 <h6><span class="label">Wind : </span><span class="value" id="setWind"></span></h6>
                             </div>
                             <div class="col-6">
-                                <h6><span class="label">Wind Degree : </span><span class="value" id="setWindDegree"></span></h6>
+                                <h6><span class="label">Wind Degree : </span><span class="value"
+                                        id="setWindDegree"></span></h6>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-6">
-                                <h6><span class="label">Wind Diraction : </span><span class="value" id="setWindDir"></span></h6>
+                                <h6><span class="label">Wind Diraction : </span><span class="value"
+                                        id="setWindDir"></span></h6>
                             </div>
                             <div class="col-6">
-                                <h6><span class="label">Pressure : </span><span class="value" id="setPressure"></span></h6>
+                                <h6><span class="label">Pressure : </span><span class="value" id="setPressure"></span>
+                                </h6>
                             </div>
                         </div>
 
@@ -117,7 +125,8 @@
                                 <h6><span class="label">Precip : </span><span class="value" id="setPrecip"></span></h6>
                             </div>
                             <div class="col-6">
-                                <h6><span class="label">Humidity : </span><span class="value" id="setHumidity"></span></h6>
+                                <h6><span class="label">Humidity : </span><span class="value" id="setHumidity"></span>
+                                </h6>
                             </div>
                         </div>
 
@@ -132,16 +141,19 @@
 
                         <div class="row">
                             <div class="col-6">
-                                <h6><span class="label">UV Radiation : </span><span class="value" id="setUV"></span></h6>
+                                <h6><span class="label">UV Radiation : </span><span class="value" id="setUV"></span>
+                                </h6>
                             </div>
                             <div class="col-6">
-                                <h6><span class="label">Gust Wind : </span><span class="value" id="setGustWind"></span></h6>
+                                <h6><span class="label">Gust Wind : </span><span class="value" id="setGustWind"></span>
+                                </h6>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-12">
-                                <h6><span class="label">Air Quality (PM2.5) : </span><span class="value" id="setAirQuality"></span></h6>
+                                <h6><span class="label">Air Quality (PM2.5) : </span><span class="value"
+                                        id="setAirQuality"></span></h6>
                             </div>
                         </div>
                     </div>
@@ -149,14 +161,21 @@
             </div>
 
             <!-- forecast -->
-            <div class="col-lg-7 forecast">
+            <div class="col-md-5 col-lg-7 forecast">
                 <div class="my-3">
                     <button class="label px-3">10 Days Forecast</button>
+                </div>
+
+                <div class="swiper futureSlider">
+                    <div class="swiper-wrapper futureSliderWrapper"></div>
+                    <div class="swiper-button-next futureSliderNext"></div>
+                    <div class="swiper-button-prev futureSliderPrev"></div>
                 </div>
             </div>
         </div>
     </div>
 
+    
 
 
 
@@ -176,7 +195,13 @@
 
 
 
-    <script src="asset/js/script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="./asset/js/script.js"></script>
 </body>
 
 </html>
