--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
             </div>
 
             <div class="col-3 col-sm-2 col-md-2 col-lg-1 notify text-end dropdown">
-                <i class="fa fa-bell mt-4 dropdown-toggle position-relative" aria-hidden="true"
-                    style="cursor: pointer;" data-bs-toggle="dropdown" data-bs-auto-close="outside"
-                    aria-expanded="false"><span
+                <i class="fa fa-bell mt-4 dropdown-toggle position-relative" aria-hidden="true" style="cursor: pointer;"
+                    data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><span
                         class="position-absolute top-0 start-100 translate-middle badge border border-light rounded-circle bg-primary p-2"></span></i>
                 <ul class="dropdown-menu notificationAdd">
                     <li><a class="notification_clear ms-2" id="btnNotifyClear" type="button">Clear All</a></li>
@@ -189,7 +188,7 @@
     </div>
 
     <!-- map and history -->
-    <div class="container-fluid map">
+    <div class="container-fluid map pb-3">
         <div class="row">
             <!-- map -->
             <div class="col-12 col-sm-12 col-lg-8 col-xxl-9 weather_map">
@@ -229,28 +228,76 @@
     </div>
 
     <!-- footer -->
+    <!-- large -->
+    <div class="container-fluid footer py-4 large">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+            <div class="col-md-8 d-flex align-items-center copy justify-content-start">
+                <a class="mb-3 me-2 mb-md-0 text-decoration-none lh-1">
+                    Weather App
+                </a>
+                <span class="mb-3 mb-md-0">&copy; 2024 iCET, Prageeth Thilakarathna</span>
+            </div>
 
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                <li><a class="text-body-secondary" href="https://wa.me/94769799234" target="_blank"><i
+                            class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="mailto: ygprageethchamara2002@gmail.com"
+                        target="_blank">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://twitter.com/pcthilakarathna"
+                        target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary"
+                        href="https://web.facebook.com/prageeth.c.thilakarathna/" target="_blank"><i
+                            class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/prageeth_thilakarathna/"
+                        target="_blank">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a></li>
+                <li class="ms-3"><a class="text-body-secondary"
+                        href="https://www.linkedin.com/in/prageeth-thilakarathna/" target="_blank"><i
+                            class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://github.com/prageeth-thilakarathna"
+                        target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+        </footer>
+    </div>
 
+    <!-- small -->
+    <div class="container-fluid footer py-4 small">
+        <footer class="py-3">
+            <div class="col-12 copy text-center">
+                <a class="mb-3 me-2 mb-md-0 text-decoration-none lh-1">
+                    Weather App
+                </a><br>
+                <span class="mb-3 mb-md-0">&copy; 2024 iCET, Prageeth Thilakarathna</span>
+            </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <ul class="nav col-12 justify-content-center list-unstyled d-flex mt-3">
+                <li><a class="text-body-secondary" href="https://wa.me/94769799234" target="_blank"><i
+                            class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="mailto: ygprageethchamara2002@gmail.com"
+                        target="_blank">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                    </a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://twitter.com/pcthilakarathna"
+                        target="_blank"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary"
+                        href="https://web.facebook.com/prageeth.c.thilakarathna/" target="_blank"><i
+                            class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://www.instagram.com/prageeth_thilakarathna/"
+                        target="_blank">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a></li>
+                <li class="ms-3"><a class="text-body-secondary"
+                        href="https://www.linkedin.com/in/prageeth-thilakarathna/" target="_blank"><i
+                            class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                <li class="ms-3"><a class="text-body-secondary" href="https://github.com/prageeth-thilakarathna"
+                        target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+            </ul>
+        </footer>
+    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
