weather history DOM manipulation issue fix

--- a/index.html
+++ b/index.html
@@ -209,8 +209,15 @@
                     <button class="label px-3">Past 07 Days</button>
                 </div>
 
-                <div class="overflow-y-auto past pastSliderWrapper"></div>
-
+                <div class="overflow-y-auto past">
+                    <div class="pastSliderWrapper-1"></div>
+                    <div class="pastSliderWrapper-2"></div>
+                    <div class="pastSliderWrapper-3"></div>
+                    <div class="pastSliderWrapper-4"></div>
+                    <div class="pastSliderWrapper-5"></div>
+                    <div class="pastSliderWrapper-6"></div>
+                    <div class="pastSliderWrapper-7"></div>
+                </div>
             </div>
         </div>
     </div>
