--- a/index.html
+++ b/index.html
@@ -222,15 +222,15 @@
         </div>
     </div>
 
-    <!-- error message -->
-    <div class="toast-container position-fixed bottom-0 end-0 p-3 errorMessage">
+    <!-- toastMessage -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3 toastMessage">
         <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
-                <img src="assets/images/error-icon.png" class="rounded me-2" alt="error-icon" style="width: 20px;">
-                <strong class="me-auto errorHeader"></strong>
+                <div class="toastIcon"></div>
+                <strong class="me-auto toastHeader"></strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
-            <div class="toast-body errorBody"></div>
+            <div class="toast-body toastBody"></div>
         </div>
     </div>
 
@@ -304,7 +304,7 @@
             </ul>
         </footer>
     </div>
-    
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
